Downgrade entire project to JDK11 (#26)